# axum-backend-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: alias.rs  error.rs  lib.rs  macros.rs  main.rs  traits.rs
src/bootstrap/: app.rs  mod.rs
src/config/: app_state.rs  constants.rs  mod.rs  targets.rs
src/model/: user.rs
src/router/: admin.rs  mod.rs  v0.rs
src/service/: user.rs
src/util/: mod.rs  tracer.rs
