[package]
name = "axum-backend-template"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.1"
axum-prometheus = "0.8.0"
axum-server = "0.7.2"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
redis = { version = "0.29.1", features = ["aio", "connection-manager", "json", "tokio-rustls-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls"] }
thiserror = "2.0.12"
tokio = "1.44.1"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time"] }
